refactor(docs): remove extra documentation files and all emojis
- Remove 8 extra documentation files from docs/ directory
- Remove all emojis from README, CHANGELOG, and ROADMAP
- Consolidate all documentation in README.md
- Update CHANGELOG to remove references to deleted documentation
- Keep only essential files: README, CHANGELOG, ROADMAP